...
    <!--    Menu buttons-->
    <string name="recipe_engine">Recipe Engine</string>
    <string name="take_photo">Add to Pantry</string>
    <string name="flavor_profile">Flavor Profile</string>
    <string name="req_ingredient">Request Ingredient</string>
    <string name="cook_together">Cook with others</string>
    <string name="recipe_review">Recipe Reviews</string>
    <string name="grocery_upload">Upload Groceries</string>
    <string name="signout">Sign out</string>

    <string name="read_more">Read more</string>
    <string name="write_rev">Write your own review</string>
    <string name="title">Title</string>
...
    <string name="Loremipsum">Lorem Ipsum</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="like_info">Rating count is only updated upon refreshing the recipes activity.
    Please go to the main menu, and then reopen this review to see the count increase. </string>

    <string name="shared_pref_filename">com.beaker.reciperoulette.TOKEN</string>


    <string name="req_ingred">Request Ingredients</string>
    <string name="donate_ingred">Donate Ingredients</string>
    <string name="donate">Donate</string>
    <string name="contact">Contact Details</string>
    <string name="ingredient">Ingredient</string>
    <string name="view_prev_req">View outstanding requests</string>

    <string name="your_requests">Your Requests</string>
    <string name="must_enter_contact">You must enter the ingredient and your contact details.</string>

    <string name="go_out_with_others">Go out with others</string>
    <string name="lonely">Don\'t see any entries? This feature is called cook with others, not cook with yourself.
    Tell your friends to hit the \"Cook with others\" button on their (another) phones.</string>

    <string name="name">Name</string>
...
