<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reviews.RecipeFacebook"
    tools:layout_editor_absoluteX="-1dp"
    tools:layout_editor_absoluteY="-13dp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#673AB7"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.468" />

    <EditText
        android:id="@+id/rq_ingredient_entry"
        android:layout_width="237dp"
        android:layout_height="55dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="92dp"
        android:ems="10"
        android:hint="@string/ingredient"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rq_title"
        app:layout_constraintVertical_bias="0.022" />

    <TextView
        android:id="@+id/rq_donate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/donate_ingred"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.038" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rq_recycler"
        android:layout_width="333dp"
        android:layout_height="300dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rq_donate_title"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/rq_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/req_ingred"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.083" />

    <Button
        android:id="@+id/rq_ingredreq_but"
        android:layout_width="174dp"
        android:layout_height="69dp"
        android:text="@string/req_ingredient"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.232"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rq_ingredient_entry"
        app:layout_constraintVertical_bias="0.84" />

    <EditText
        android:id="@+id/rq_contact_entry"
        android:layout_width="240dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/contact_details"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/rq_ingredreq_but"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.327"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rq_ingredient_entry"
        app:layout_constraintVertical_bias="0.444" />

</androidx.constraintlayout.widget.ConstraintLayout>